tests/build/widget_macro/fail/module_path_missing.rs
use zero_ui::core::widget2;

// path is missing
#[widget2]
pub mod widget {}

fn main() {}
